--- a/.github/workflows/auto_assign.yml
+++ b/.github/workflows/auto_assign.yml
@@ -1,26 +1,6 @@
-name: Run tests for OTUS homework
+# Set to true to add assignees to pull requests
+addAssignees: true
 
-on:
-  push:
-    branches-ignore: main
-  pull_request:
-    branches-ignore: main
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout this repo
-      uses: actions/checkout@v2
-      with:
-        ref: ${{ github.ref }}
-    - name: Checkout repo with tests
-      uses: actions/checkout@v2
-      with:
-        repository: "express42/otus-homeworks"
-        ref: 2021-08
-        path: "./otus-homeworks/"
-
-    - name: Run tests
-      run: curl https://raw.githubuse
+# A list of reviewers to be added to pull requests (GitHub user name)
+reviewers: 
+  - mrgreyves
