--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
-        "service_account_key_file": "key.json.example",
+        "service_account_key_file": "packer/key.json.example",
         "folder_id": "folder id",
         "source_image_family": "ubuntu image version",
         "preemptible": "true",
