--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,13 @@ meta.stage.yml
 
 jdauphant.nginx
 vault.key
+
+# Vagrant & molecule
+.vagrant/
+*.log
+*.pyc
+.molecule
+.cache
+.pytest_cache
+
+venv/
