--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -6,13 +6,15 @@
     - name: Fetch the latest version of application code
       git:
         repo: 'https://github.com/express42/reddit.git'
-        dest: /home/appuser/reddit
+        dest: "/home/{{ deploy_user }}/reddit"
         version: monolith
       notify: restart puma
+
     - name: bundle install
       bundler:
         state: present
-        chdir: /home/appuser/reddit
+        chdir: "/home/{{ deploy_user }}/reddit"
+
   handlers:
   - name: restart puma
     become: true
